Tweaks and fixes to notation parser, including prep for jump change notation

--- a/src/Blueline/BluelineBundle/Resources/public/css/all/lists.less
+++ b/src/Blueline/BluelineBundle/Resources/public/css/all/lists.less
@@ -31,6 +31,22 @@ ol, ul {
 	}
 }
 
+section.text {
+	ul {
+		list-style: disc outside none;
+	}
+	ol {
+		list-style: decimal outside none;
+	}
+	ol, ul {
+		padding: 0 0 0 @contentXPadding*2;
+		li {
+			border: 0;
+			padding: 0 0 0 @contentXPadding;
+		}
+	}
+}
+
 dl {
 	margin: 0;
 	padding: 0;
